logs/minsci.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/minsci'...
Listing './lib/python3.5/site-packages/minsci/geotaxa'...
Listing './lib/python3.5/site-packages/minsci/geotaxa/files'...
Compiling './lib/python3.5/site-packages/minsci/geotaxa/geotaxa.py'...
***   File "./lib/python3.5/site-packages/minsci/geotaxa/geotaxa.py", line 51
    print '{:,} records read'.format(len(self.taxa))
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minsci/helpers.py'...
***   File "./lib/python3.5/site-packages/minsci/helpers.py", line 66
    print q
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/minsci/mosaic'...
Listing './lib/python3.5/site-packages/minsci/mosaic/files'...
Compiling './lib/python3.5/site-packages/minsci/mosaic/mosaic.py'...
***   File "./lib/python3.5/site-packages/minsci/mosaic/mosaic.py", line 86
    print 'Getting tile parameters...'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minsci/mosaic/offset.py'...
***   File "./lib/python3.5/site-packages/minsci/mosaic/offset.py", line 59
    print 'Provided offsets no good'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minsci/mosaic/organizer.py'...
***   File "./lib/python3.5/site-packages/minsci/mosaic/organizer.py", line 43
    print 'Source directory is {}'.format(src_dir)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minsci/mosaic/selector.py'...
***   File "./lib/python3.5/site-packages/minsci/mosaic/selector.py", line 52
    print 'No tiles find in selected directory!'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minsci/my_requests.py'...
***   File "./lib/python3.5/site-packages/minsci/my_requests.py", line 23
    print 'Removed old cache file'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/minsci/xmu'...
Compiling './lib/python3.5/site-packages/minsci/xmu/xmu.py'...
***   File "./lib/python3.5/site-packages/minsci/xmu/xmu.py", line 36
    print 'Error! Invalid engine: ' + self.engine
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/minsci-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/nameparser'...
Listing './lib/python3.5/site-packages/nameparser/config'...
Listing './lib/python3.5/site-packages/nameparser-0.5.5.dist-info'...
Listing './lib/python3.5/site-packages/natsort'...
Listing './lib/python3.5/site-packages/natsort/compat'...
Listing './lib/python3.5/site-packages/natsort-5.1.1.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyglet'...
Listing './lib/python3.5/site-packages/pyglet/app'...
Listing './lib/python3.5/site-packages/pyglet/canvas'...
Listing './lib/python3.5/site-packages/pyglet/extlibs'...
Listing './lib/python3.5/site-packages/pyglet/font'...
Listing './lib/python3.5/site-packages/pyglet/gl'...
Listing './lib/python3.5/site-packages/pyglet/graphics'...
Listing './lib/python3.5/site-packages/pyglet/image'...
Listing './lib/python3.5/site-packages/pyglet/image/codecs'...
Listing './lib/python3.5/site-packages/pyglet/input'...
Listing './lib/python3.5/site-packages/pyglet/libs'...
Listing './lib/python3.5/site-packages/pyglet/libs/darwin'...
Listing './lib/python3.5/site-packages/pyglet/libs/darwin/cocoapy'...
Listing './lib/python3.5/site-packages/pyglet/libs/win32'...
Listing './lib/python3.5/site-packages/pyglet/libs/x11'...
Listing './lib/python3.5/site-packages/pyglet/media'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/directsound'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/openal'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/pulse'...
Listing './lib/python3.5/site-packages/pyglet/media/sources'...
Listing './lib/python3.5/site-packages/pyglet/text'...
Listing './lib/python3.5/site-packages/pyglet/text/formats'...
Listing './lib/python3.5/site-packages/pyglet/window'...
Listing './lib/python3.5/site-packages/pyglet/window/carbon'...
Listing './lib/python3.5/site-packages/pyglet/window/cocoa'...
Listing './lib/python3.5/site-packages/pyglet/window/win32'...
Listing './lib/python3.5/site-packages/pyglet/window/xlib'...
Listing './lib/python3.5/site-packages/pyglet-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pyodbc-4.0.21.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
